--- a/404.html
+++ b/404.html
@@ -68,14 +68,19 @@
 
 
 
-<li><a href="//github.com/digitalcraftsman" class="icon-github" target="_blank" title="Github"></a></li>
-
 
 
 
 <li><a href="http://personalizationpodcast.com/post/index.xml" class="icon-rss" target="_blank" title="RSS"></a></li>
 
   </ul>
+  <p class="badge">
+  <a href="https://geo.itunes.apple.com/us/podcast/the-personalization-podcast/id1073005980?mt=2" style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat;width:165px;height:40px;"></a>
+  </p>
+  <p class="badge">
+  <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fpersonalizationpodcast&color=orange_white&size=48" style="width: 48px; height: 48px;"></iframe>
+  <p>
+
   <br><br>
 </aside>
 
